removed dependency on wix framework form tests module